Added hierarchialUrl
